--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -59,7 +59,40 @@
     }
    ],
    "source": [
-    "!cd ../benchmark/datasets/mnist && mkdir -pv data/raw && python mnist.py"
+    "!cd ../benchmark/datasets/mnist && mkdir -pv data/raw"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b54992be",
+   "metadata": {},
+   "source": [
+    "### Valid dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e50eb4b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 28, 28]) torch.Size([])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from benchmark.datasets.mnist import get_mnist\n",
+    "from torchvision.transforms import ToTensor\n",
+    "\n",
+    "dataset = get_mnist('../benchmark/datasets/mnist/data/', total_parts=100)\n",
+    "\n",
+    "x, y = dataset[0]\n",
+    "\n",
+    "print(x.shape, y.shape)"
    ]
   },
   {
