--- a/docs/reddit.ipynb
+++ b/docs/reddit.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ef7498",
+   "id": "83e672a3",
    "metadata": {},
    "source": [
     "## Data Download"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c469fa0a",
+   "id": "9f48d3f5",
    "metadata": {},
    "source": [
     "### Setup Instructions"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccedda33",
+   "id": "7bcc4dce",
    "metadata": {},
    "source": [
     "#### Install dependencies"
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c48905e6",
+   "id": "f72ee583",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07866811",
+   "id": "ebf9cad2",
    "metadata": {},
    "source": [
     "#### Download preprocessed data from google driver"
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1ac2947",
+   "id": "36a285b6",
    "metadata": {},
    "source": [
     "To use our reference model, download the data [here](https://drive.google.com/file/d/1PwBpAEMYKNpnv64cQ2TIQfSc_vPbq3OQ/view?usp=sharing) into a `data` subfolder in `../benchmark/datasets/reddit/data`. This is a sub-sampled version of the complete data. Our reference implementation doesn't yet support training on the [complete dataset](https://drive.google.com/file/d/1lT1Z0N1weG-oA2PgC1Jak_WQ6h3bu7V_/view?usp=sharing), as it loads all given clients into memory."
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef4dbda2",
+   "id": "1495e1fc",
    "metadata": {},
    "source": [
     "#### Download raw data and preprocess it manualy (Optional)\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f20224e",
+   "id": "62161818",
    "metadata": {},
    "source": [
     "- Open a terminal and run the following command to download and unzip dataset:\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94539056",
+   "id": "31c5b8bd",
    "metadata": {},
    "source": [
     "#### Build training vocabulary"
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "05c44b39",
+   "id": "cd51ff2e",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f06deaf3",
+   "id": "7f0a2ec4",
    "metadata": {},
    "source": [
     "### Valid dataset\n"
@@ -203,10 +203,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd02529c",
+   "execution_count": 5,
+   "id": "b9cbf1fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reddit(total_parts: 765071, total_samples: 15358157, current_parts: 0)\n",
+      "torch.Size([10]) torch.Size([10])\n",
+      "vocab size: 10000\n"
+     ]
+    }
+   ],
    "source": [
     "from benchmark.datasets.reddit import get_reddit\n",
     "dataset = get_reddit('../benchmark/datasets/reddit/data')\n",
