--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b54992be",
+   "id": "93143dac",
    "metadata": {},
    "source": [
     "### Valid dataset"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e50eb4b3",
+   "id": "9cbe19dc",
    "metadata": {},
    "outputs": [
     {
@@ -93,6 +93,273 @@
     "x, y = dataset[0]\n",
     "\n",
     "print(x.shape, y.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fba629c",
+   "metadata": {},
+   "source": [
+    "## FedAvg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a13fd443",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Load Props\n",
+      "<OpenFed> FederatedProperties\n",
+      "+--------------------+------------+\n",
+      "|        role        | nick_name  |\n",
+      "+--------------------+------------+\n",
+      "| openfed_aggregator | aggregator |\n",
+      "+--------------------+------------+\n",
+      "<OpenFed> Address\n",
+      "+---------+---------------------+------------+------+\n",
+      "| backend |     init_method     | world_size | rank |\n",
+      "+---------+---------------------+------------+------+\n",
+      "|   gloo  | file:///...aredfile |     5      |  0   |\n",
+      "+---------+---------------------+------------+------+\n",
+      "\n",
+      "\n",
+      ">>> Seed everything...\n",
+      ">>> Log argparse to json...\n",
+      ">>> Config device...\n",
+      "{'task': 'mnist', 'network_args': {}, 'data_root': '../benchmark/datasets/mnist/data', 'partition': 'dirichlet', 'partition_args': {'alpha': 100.0}, 'num_parts': 1000, 'tst_num_parts': 4, 'dataset_args': {}, 'epochs': 1, 'rounds': 20, 'act_clts': 10, 'act_clts_rat': 1.0, 'tst_act_clts': -1, 'tst_act_clts_rat': 1.0, 'max_acg_step': -1, 'optim': 'fedavg', 'optim_args': {'momentum': 0.9, 'weight_decay': 0.0001}, 'co_lr': 0.1, 'ag_lr': 1.0, 'bz': 100, 'gpu': True, 'log_dir': 'logs/mnist/fedavg_dirichlet_mnist', 'exp_name': 'fedavg_dirichlet_mnist', 'seed': 0, 'props': '/tmp/aggregator.json', 'device': device(type='cpu')}\n",
+      "\tLet's use cpu.\n",
+      ">>> Load dataset...\n",
+      ">>> Load Props\n",
+      "<OpenFed> FederatedProperties\n",
+      "+----------------------+----------------+\n",
+      "|         role         |   nick_name    |\n",
+      "+----------------------+----------------+\n",
+      "| openfed_collaborator | collaborator-1 |\n",
+      "+----------------------+----------------+\n",
+      "<OpenFed> Address\n",
+      "+---------+---------------------+------------+------+\n",
+      "| backend |     init_method     | world_size | rank |\n",
+      "+---------+---------------------+------------+------+\n",
+      "|   gloo  | file:///...aredfile |     5      |  1   |\n",
+      "+---------+---------------------+------------+------+\n",
+      "\n",
+      "\n",
+      ">>> Seed everything...\n",
+      ">>> Log argparse to json...\n",
+      ">>> Config device...\n",
+      "{'task': 'mnist', 'network_args': {}, 'data_root': '../benchmark/datasets/mnist/data', 'partition': 'dirichlet', 'partition_args': {'alpha': 100.0}, 'num_parts': 1000, 'tst_num_parts': 4, 'dataset_args': {}, 'epochs': 1, 'rounds': 20, 'act_clts': 10, 'act_clts_rat': 1.0, 'tst_act_clts': -1, 'tst_act_clts_rat': 1.0, 'max_acg_step': -1, 'optim': 'fedavg', 'optim_args': {'momentum': 0.9, 'weight_decay': 0.0001}, 'co_lr': 0.1, 'ag_lr': 1.0, 'bz': 100, 'gpu': True, 'log_dir': 'logs/mnist/fedavg_dirichlet_mnist', 'exp_name': 'fedavg_dirichlet_mnist', 'seed': 0, 'props': '/tmp/collaborator-1.json', 'device': device(type='cpu')}\n",
+      "\tLet's use cpu.\n",
+      ">>> Load dataset...\n",
+      ">>> Load Props\n",
+      "<OpenFed> FederatedProperties\n",
+      "+----------------------+----------------+\n",
+      "|         role         |   nick_name    |\n",
+      "+----------------------+----------------+\n",
+      "| openfed_collaborator | collaborator-2 |\n",
+      "+----------------------+----------------+\n",
+      "<OpenFed> Address\n",
+      "+---------+---------------------+------------+------+\n",
+      "| backend |     init_method     | world_size | rank |\n",
+      "+---------+---------------------+------------+------+\n",
+      "|   gloo  | file:///...aredfile |     5      |  2   |\n",
+      "+---------+---------------------+------------+------+\n",
+      "\n",
+      "\n",
+      ">>> Seed everything...\n",
+      ">>> Log argparse to json...\n",
+      ">>> Config device...\n",
+      "{'task': 'mnist', 'network_args': {}, 'data_root': '../benchmark/datasets/mnist/data', 'partition': 'dirichlet', 'partition_args': {'alpha': 100.0}, 'num_parts': 1000, 'tst_num_parts': 4, 'dataset_args': {}, 'epochs': 1, 'rounds': 20, 'act_clts': 10, 'act_clts_rat': 1.0, 'tst_act_clts': -1, 'tst_act_clts_rat': 1.0, 'max_acg_step': -1, 'optim': 'fedavg', 'optim_args': {'momentum': 0.9, 'weight_decay': 0.0001}, 'co_lr': 0.1, 'ag_lr': 1.0, 'bz': 100, 'gpu': True, 'log_dir': 'logs/mnist/fedavg_dirichlet_mnist', 'exp_name': 'fedavg_dirichlet_mnist', 'seed': 0, 'props': '/tmp/collaborator-2.json', 'device': device(type='cpu')}\n",
+      "\tLet's use cpu.\n",
+      ">>> Load dataset...\n",
+      ">>> Load Props\n",
+      "<OpenFed> FederatedProperties\n",
+      "+----------------------+----------------+\n",
+      "|         role         |   nick_name    |\n",
+      "+----------------------+----------------+\n",
+      "| openfed_collaborator | collaborator-4 |\n",
+      "+----------------------+----------------+\n",
+      "<OpenFed> Address\n",
+      "+---------+---------------------+------------+------+\n",
+      "| backend |     init_method     | world_size | rank |\n",
+      "+---------+---------------------+------------+------+\n",
+      "|   gloo  | file:///...aredfile |     5      |  4   |\n",
+      "+---------+---------------------+------------+------+\n",
+      "\n",
+      "\n",
+      ">>> Seed everything...\n",
+      ">>> Log argparse to json...\n",
+      ">>> Config device...\n",
+      "{'task': 'mnist', 'network_args': {}, 'data_root': '../benchmark/datasets/mnist/data', 'partition': 'dirichlet', 'partition_args': {'alpha': 100.0}, 'num_parts': 1000, 'tst_num_parts': 4, 'dataset_args': {}, 'epochs': 1, 'rounds': 20, 'act_clts': 10, 'act_clts_rat': 1.0, 'tst_act_clts': -1, 'tst_act_clts_rat': 1.0, 'max_acg_step': -1, 'optim': 'fedavg', 'optim_args': {'momentum': 0.9, 'weight_decay': 0.0001}, 'co_lr': 0.1, 'ag_lr': 1.0, 'bz': 100, 'gpu': True, 'log_dir': 'logs/mnist/fedavg_dirichlet_mnist', 'exp_name': 'fedavg_dirichlet_mnist', 'seed': 0, 'props': '/tmp/collaborator-4.json', 'device': device(type='cpu')}\n",
+      "\tLet's use cpu.\n",
+      ">>> Load dataset...\n",
+      ">>> Load Props\n",
+      "<OpenFed> FederatedProperties\n",
+      "+----------------------+----------------+\n",
+      "|         role         |   nick_name    |\n",
+      "+----------------------+----------------+\n",
+      "| openfed_collaborator | collaborator-3 |\n",
+      "+----------------------+----------------+\n",
+      "<OpenFed> Address\n",
+      "+---------+---------------------+------------+------+\n",
+      "| backend |     init_method     | world_size | rank |\n",
+      "+---------+---------------------+------------+------+\n",
+      "|   gloo  | file:///...aredfile |     5      |  3   |\n",
+      "+---------+---------------------+------------+------+\n",
+      "\n",
+      "\n",
+      ">>> Seed everything...\n",
+      ">>> Log argparse to json...\n",
+      ">>> Config device...\n",
+      "{'task': 'mnist', 'network_args': {}, 'data_root': '../benchmark/datasets/mnist/data', 'partition': 'dirichlet', 'partition_args': {'alpha': 100.0}, 'num_parts': 1000, 'tst_num_parts': 4, 'dataset_args': {}, 'epochs': 1, 'rounds': 20, 'act_clts': 10, 'act_clts_rat': 1.0, 'tst_act_clts': -1, 'tst_act_clts_rat': 1.0, 'max_acg_step': -1, 'optim': 'fedavg', 'optim_args': {'momentum': 0.9, 'weight_decay': 0.0001}, 'co_lr': 0.1, 'ag_lr': 1.0, 'bz': 100, 'gpu': True, 'log_dir': 'logs/mnist/fedavg_dirichlet_mnist', 'exp_name': 'fedavg_dirichlet_mnist', 'seed': 0, 'props': '/tmp/collaborator-3.json', 'device': device(type='cpu')}\n",
+      "\tLet's use cpu.\n",
+      ">>> Load dataset...\n",
+      "PartitionerDataset(total_parts: 1000, total_samples: 60000, current_parts: 0)\n",
+      "PartitionerDataset(total_parts: 4, total_samples: 60000, current_parts: 0)\n",
+      ">>> Load dataLoader...\n",
+      "PartitionerDataset(total_parts: 1000, total_samples: 60000, current_parts: 0)\n",
+      "PartitionerDataset(total_parts: 4, total_samples: 60000, current_parts: 0)\n",
+      ">>> Load dataLoader...\n",
+      ">>> Build network...\n",
+      ">>> Build network...\n",
+      "Mnist(\n",
+      "  (logits): Linear(in_features=784, out_features=10, bias=True)\n",
+      "  (loss_fn): CrossEntropyLoss()\n",
+      ")\n",
+      ">>> Move to device...\n",
+      "Mnist(\n",
+      "  (logits): Linear(in_features=784, out_features=10, bias=True)\n",
+      "  (loss_fn): CrossEntropyLoss()\n",
+      ")\n",
+      ">>> Move to device...\n",
+      ">>> Federated Optimizer...\n",
+      ">>> Federated Optimizer...\n",
+      ">>> Lr Scheduler...\n",
+      ">>> Lr Scheduler...\n",
+      ">>> Maintainer...\n",
+      ">>> Maintainer...\n",
+      "PartitionerDataset(total_parts: 1000, total_samples: 60000, current_parts: 0)\n",
+      "PartitionerDataset(total_parts: 4, total_samples: 60000, current_parts: 0)\n",
+      ">>> Load dataLoader...\n",
+      ">>> Build network...\n",
+      "PartitionerDataset(total_parts: 1000, total_samples: 60000, current_parts: 0)\n",
+      "PartitionerDataset(total_parts: 4, total_samples: 60000, current_parts: 0)\n",
+      ">>> Load dataLoader...\n",
+      ">>> Build network...\n",
+      "Mnist(\n",
+      "  (logits): Linear(in_features=784, out_features=10, bias=True)\n",
+      "  (loss_fn): CrossEntropyLoss()\n",
+      ")\n",
+      ">>> Move to device...\n",
+      ">>> Federated Optimizer...\n",
+      ">>> Lr Scheduler...\n",
+      ">>> Maintainer...\n",
+      "PartitionerDataset(total_parts: 1000, total_samples: 60000, current_parts: 0)\n",
+      "PartitionerDataset(total_parts: 4, total_samples: 60000, current_parts: 0)\n",
+      ">>> Load dataLoader...\n",
+      "Mnist(\n",
+      "  (logits): Linear(in_features=784, out_features=10, bias=True)\n",
+      "  (loss_fn): CrossEntropyLoss()\n",
+      ")\n",
+      ">>> Move to device...\n",
+      ">>> Build network...\n",
+      ">>> Federated Optimizer...\n",
+      ">>> Lr Scheduler...\n",
+      ">>> Maintainer...\n",
+      "Mnist(\n",
+      "  (logits): Linear(in_features=784, out_features=10, bias=True)\n",
+      "  (loss_fn): CrossEntropyLoss()\n",
+      ")\n",
+      ">>> Move to device...\n",
+      ">>> Federated Optimizer...\n",
+      ">>> Lr Scheduler...\n",
+      ">>> Maintainer...\n",
+      "[W ProcessGroupGloo.cpp:559] Warning: Unable to resolve hostname to a (local) address. Using the loopback address as fallback. Manually set the network interface to bind to with GLOO_SOCKET_IFNAME. (function operator())\n",
+      "[W ProcessGroupGloo.cpp:559] Warning: Unable to resolve hostname to a (local) address. Using the loopback address as fallback. Manually set the network interface to bind to with GLOO_SOCKET_IFNAME. (function operator())\n",
+      "[W ProcessGroupGloo.cpp:559] Warning: Unable to resolve hostname to a (local) address. Using the loopback address as fallback. Manually set the network interface to bind to with GLOO_SOCKET_IFNAME. (function operator())\n",
+      "[W ProcessGroupGloo.cpp:559] Warning: Unable to resolve hostname to a (local) address. Using the loopback address as fallback. Manually set the network interface to bind to with GLOO_SOCKET_IFNAME. (function operator())\n",
+      "[W ProcessGroupGloo.cpp:559] Warning: Unable to resolve hostname to a (local) address. Using the loopback address as fallback. Manually set the network interface to bind to with GLOO_SOCKET_IFNAME. (function operator())\n",
+      "/Users/densechen/code/OpenFed/openfed/federated/functional.py:131: UserWarning: [enforce fail at /Users/distiller/project/conda/conda-bld/pytorch_1616554799287/work/third_party/gloo/gloo/transport/uv/address.cc:27] sizeof(impl_) == bytes.size(). 136 vs 34\n",
+      "  warnings.warn(str(e))\n",
+      "/Users/densechen/code/OpenFed/openfed/federated/functional.py:131: UserWarning: [enforce fail at /Users/distiller/project/conda/conda-bld/pytorch_1616554799287/work/third_party/gloo/gloo/transport/uv/address.cc:27] sizeof(impl_) == bytes.size(). 136 vs 34\n",
+      "  warnings.warn(str(e))\n",
+      "Traceback (most recent call last):\n",
+      "  File \"../main.py\", line 253, in <module>\n",
+      "/Users/densechen/code/OpenFed/openfed/federated/functional.py:131: UserWarning: [enforce fail at /Users/distiller/project/conda/conda-bld/pytorch_1616554799287/work/third_party/gloo/gloo/transport/uv/address.cc:27] sizeof(impl_) == bytes.size(). 136 vs 34\n",
+      "  warnings.warn(str(e))\n",
+      "Traceback (most recent call last):\n",
+      "  File \"../main.py\", line 253, in <module>\n",
+      "    maintainer = openfed.core.Maintainer(props, network.state_dict(keep_vars=True))\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/core/maintainer.py\", line 93, in __init__\n",
+      "Traceback (most recent call last):\n",
+      "  File \"../main.py\", line 253, in <module>\n",
+      "    self.build_connection()\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/core/maintainer.py\", line 214, in build_connection\n",
+      "    maintainer = openfed.core.Maintainer(props, network.state_dict(keep_vars=True))\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/core/maintainer.py\", line 93, in __init__\n",
+      "    assert pipes, 'init_federated_group failed.'\n",
+      "AssertionError: init_federated_group failed.\n",
+      "    maintainer = openfed.core.Maintainer(props, network.state_dict(keep_vars=True))\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/core/maintainer.py\", line 93, in __init__\n",
+      "    self.build_connection()\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/core/maintainer.py\", line 214, in build_connection\n",
+      "    self.build_connection()\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/core/maintainer.py\", line 214, in build_connection\n",
+      "    assert pipes, 'init_federated_group failed.'\n",
+      "AssertionError: init_federated_group failed.\n",
+      "    assert pipes, 'init_federated_group failed.'\n",
+      "AssertionError: init_federated_group failed.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Killing subprocess 80544\r\n",
+      "Killing subprocess 80545\r\n",
+      "Killing subprocess 80546\r\n",
+      "Killing subprocess 80547\r\n",
+      "Killing subprocess 80548\r\n",
+      "Traceback (most recent call last):\r\n",
+      "  File \"/Users/densechen/miniconda3/envs/openfed/lib/python3.7/runpy.py\", line 193, in _run_module_as_main\r\n",
+      "    \"__main__\", mod_spec)\r\n",
+      "  File \"/Users/densechen/miniconda3/envs/openfed/lib/python3.7/runpy.py\", line 85, in _run_code\r\n",
+      "    exec(code, run_globals)\r\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/tools/simulator.py\", line 214, in <module>\r\n",
+      "    main()\r\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/tools/simulator.py\", line 197, in main\r\n",
+      "    sigkill_handler(signal.SIGTERM, None)\r\n",
+      "  File \"/Users/densechen/code/OpenFed/openfed/tools/simulator.py\", line 131, in sigkill_handler\r\n",
+      "    returncode=last_return_code, cmd=cmd)\r\n",
+      "subprocess.CalledProcessError: Command '['/Users/densechen/miniconda3/envs/openfed/bin/python', '-u', '../main.py', '--task', 'mnist', '--data_root', '../benchmark/datasets/mnist/data', '--partition', 'dirichlet', '--partition_args', 'alpha:100.0', '--num_parts', '1000', '--epochs', '1', '--rounds', '20', '--act_clts', '10', '--tst_act_clts', '-1', '--max_acg_step', '-1', '--optim', 'fedavg', '--optim_args', 'momentum:0.9', 'weight_decay:1e-4', '--co_lr', '0.1', '--ag_lr', '1.0', '--bz', '100', '--gpu', '--log_dir', 'logs', '--exp_name', 'fedavg_dirichlet_mnist', '--seed', '0', '--props=/tmp/collaborator-4.json']' returned non-zero exit status 1.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "python -m openfed.tools.simulator --nproc 5 --logdir /tmp/ main.py\\\n",
+    "    --task mnist\\\n",
+    "    --data_root benchmark/datasets/mnist/data\\\n",
+    "    --partition dirichlet\\\n",
+    "    --partition_args alpha:100.0\\\n",
+    "    --num_parts 1000\\\n",
+    "    --epochs 1\\\n",
+    "    --rounds 20\\\n",
+    "    --act_clts 10\\\n",
+    "    --tst_act_clts -1\\\n",
+    "    --max_acg_step -1\\\n",
+    "    --optim fedavg\\\n",
+    "    --optim_args momentum:0.9 weight_decay:1e-4\\\n",
+    "    --co_lr 0.1\\\n",
+    "    --ag_lr 1.0\\\n",
+    "    --bz 100\\\n",
+    "    --gpu\\\n",
+    "    --log_dir logs\\\n",
+    "    --exp_name fedavg_dirichlet_mnist\\\n",
+    "    --seed 0"
    ]
   },
   {
