--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26ef9d4e",
+   "id": "eac0760e",
    "metadata": {},
    "source": [
     "### Valid dataset"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "54f07274",
+   "id": "5eb52aa1",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36c15612",
+   "id": "ba3ecd58",
    "metadata": {},
    "source": [
     "## FedAvg"
@@ -105,8 +105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "7246cb87",
+   "execution_count": null,
+   "id": "9943238c",
    "metadata": {},
    "outputs": [
     {
@@ -123,26 +123,6 @@
       "Note: Stdout and stderr for collaborator-8 will be written to /tmp/openfed_node_collaborator-8_stdout, /tmp/openfed_node_collaborator-8_stderr respectively.\n",
       "Note: Stdout and stderr for collaborator-9 will be written to /tmp/openfed_node_collaborator-9_stdout, /tmp/openfed_node_collaborator-9_stderr respectively.\n",
       "Note: Stdout and stderr for collaborator-10 will be written to /tmp/openfed_node_collaborator-10_stdout, /tmp/openfed_node_collaborator-10_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-11 will be written to /tmp/openfed_node_collaborator-11_stdout, /tmp/openfed_node_collaborator-11_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-12 will be written to /tmp/openfed_node_collaborator-12_stdout, /tmp/openfed_node_collaborator-12_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-13 will be written to /tmp/openfed_node_collaborator-13_stdout, /tmp/openfed_node_collaborator-13_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-14 will be written to /tmp/openfed_node_collaborator-14_stdout, /tmp/openfed_node_collaborator-14_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-15 will be written to /tmp/openfed_node_collaborator-15_stdout, /tmp/openfed_node_collaborator-15_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-16 will be written to /tmp/openfed_node_collaborator-16_stdout, /tmp/openfed_node_collaborator-16_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-17 will be written to /tmp/openfed_node_collaborator-17_stdout, /tmp/openfed_node_collaborator-17_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-18 will be written to /tmp/openfed_node_collaborator-18_stdout, /tmp/openfed_node_collaborator-18_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-19 will be written to /tmp/openfed_node_collaborator-19_stdout, /tmp/openfed_node_collaborator-19_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-20 will be written to /tmp/openfed_node_collaborator-20_stdout, /tmp/openfed_node_collaborator-20_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-21 will be written to /tmp/openfed_node_collaborator-21_stdout, /tmp/openfed_node_collaborator-21_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-22 will be written to /tmp/openfed_node_collaborator-22_stdout, /tmp/openfed_node_collaborator-22_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-23 will be written to /tmp/openfed_node_collaborator-23_stdout, /tmp/openfed_node_collaborator-23_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-24 will be written to /tmp/openfed_node_collaborator-24_stdout, /tmp/openfed_node_collaborator-24_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-25 will be written to /tmp/openfed_node_collaborator-25_stdout, /tmp/openfed_node_collaborator-25_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-26 will be written to /tmp/openfed_node_collaborator-26_stdout, /tmp/openfed_node_collaborator-26_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-27 will be written to /tmp/openfed_node_collaborator-27_stdout, /tmp/openfed_node_collaborator-27_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-28 will be written to /tmp/openfed_node_collaborator-28_stdout, /tmp/openfed_node_collaborator-28_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-29 will be written to /tmp/openfed_node_collaborator-29_stdout, /tmp/openfed_node_collaborator-29_stderr respectively.\n",
-      "Note: Stdout and stderr for collaborator-30 will be written to /tmp/openfed_node_collaborator-30_stdout, /tmp/openfed_node_collaborator-30_stderr respectively.\n",
       ">>> Load Props\n",
       "<OpenFed> FederatedProperties\n",
       "+--------------------+------------+\n",
@@ -154,18 +134,18 @@
       "+---------+---------------------+------------+------+\n",
       "| backend |     init_method     | world_size | rank |\n",
       "+---------+---------------------+------------+------+\n",
-      "|   gloo  | file:///...aredfile |     31     |  0   |\n",
+      "|   gloo  | file:///...aredfile |     11     |  0   |\n",
       "+---------+---------------------+------------+------+\n",
       "\n",
       "\n",
       ">>> Seed everything...\n",
       ">>> Log argparse to json...\n",
       ">>> Config device...\n",
-      "{'task': 'mnist', 'network_args': {}, 'data_root': '../benchmark/datasets/mnist/data', 'partition': 'dirichlet', 'partition_args': {'alpha': 100.0}, 'num_parts': 1000, 'tst_num_parts': 30, 'dataset_args': {}, 'epochs': 1, 'rounds': 200, 'act_clts': 100, 'act_clts_rat': 1.0, 'tst_act_clts': 30, 'tst_act_clts_rat': 1.0, 'max_acg_step': -1, 'optim': 'fedavg', 'optim_args': {'momentum': 0.9, 'weight_decay': 0.0001}, 'co_lr': 0.1, 'ag_lr': 1.0, 'bz': 100, 'gpu': True, 'log_dir': 'logs/mnist/fedavg_dirichlet_mnist', 'exp_name': 'fedavg_dirichlet_mnist', 'seed': 0, 'props': '/tmp/aggregator.json', 'device': device(type='cpu')}\n",
+      "{'task': 'mnist', 'network_args': {}, 'data_root': '../benchmark/datasets/mnist/data', 'partition': 'dirichlet', 'partition_args': {'alpha': 100.0}, 'num_parts': 1000, 'tst_num_parts': 10, 'dataset_args': {}, 'epochs': 1, 'rounds': 200, 'act_clts': 30, 'act_clts_rat': 1.0, 'tst_act_clts': 30, 'tst_act_clts_rat': 1.0, 'max_acg_step': -1, 'optim': 'fedavg', 'optim_args': {'momentum': 0.9, 'weight_decay': 0.0001}, 'co_lr': 0.1, 'ag_lr': 1.0, 'bz': 100, 'gpu': True, 'log_dir': 'logs/mnist/fedavg_dirichlet_mnist', 'exp_name': 'fedavg_dirichlet_mnist', 'seed': 0, 'props': '/tmp/aggregator.json', 'device': device(type='cpu')}\n",
       "\tLet's use cpu.\n",
       ">>> Load dataset...\n",
       "PartitionerDataset(total_parts: 1000, total_samples: 60000, current_parts: 0)\n",
-      "PartitionerDataset(total_parts: 30, total_samples: 60000, current_parts: 0)\n",
+      "PartitionerDataset(total_parts: 10, total_samples: 60000, current_parts: 0)\n",
       ">>> Load dataLoader...\n",
       ">>> Build network...\n",
       "Mnist(\n",
@@ -179,49 +159,15 @@
       "[W ProcessGroupGloo.cpp:559] Warning: Unable to resolve hostname to a (local) address. Using the loopback address as fallback. Manually set the network interface to bind to with GLOO_SOCKET_IFNAME. (function operator())\n",
       ">>> Register hooks...\n",
       "\tTrain Part: 1000\n",
-      "\tActivated Train Part: 100\n",
-      "\tTest Part: 30\n",
+      "\tActivated Train Part: 30\n",
+      "\tTest Part: 10\n",
       "\tActivated Test Part: 30\n",
-      "train: loss: 1.25, accuracy: 0.73 test: loss: 1.15, accuracy: 0.75:   2%| | 3/20^C\n",
-      "Killing subprocess 83921\n",
-      "Traceback (most recent call last):\n",
-      "  File \"../main.py\", line 341, in <module>\n",
-      "Killing subprocess 83922\n",
-      "Killing subprocess 83923\n",
-      "Killing subprocess 83924\n",
-      "Killing subprocess 83925\n",
-      "Killing subprocess 83926\n",
-      "Killing subprocess 83927\n",
-      "Killing subprocess 83928\n",
-      "Killing subprocess 83929\n",
-      "Killing subprocess 83930\n",
-      "Killing subprocess 83931\n",
-      "Killing subprocess 83932\n",
-      "Killing subprocess 83935\n",
-      "Killing subprocess 83938\n",
-      "Killing subprocess 83939\n",
-      "Killing subprocess 83940\n",
-      "Killing subprocess 83941\n",
-      "Killing subprocess 83942\n",
-      "Killing subprocess 83945\n",
-      "Killing subprocess 83948\n",
-      "Killing subprocess 83949\n",
-      "Killing subprocess 83951\n",
-      "Killing subprocess 83953\n",
-      "Killing subprocess 83954\n",
-      "Killing subprocess 83958\n",
-      "Killing subprocess 83960\n",
-      "Killing subprocess 83961\n",
-      "Killing subprocess 83962\n",
-      "Killing subprocess 83963\n",
-      "Killing subprocess 83965\n",
-      "Killing subprocess 83967\n",
-      "Main process received SIGINT, exiting\n"
+      "train: loss: 0.39, accuracy: 0.89 test: loss: 0.39, accuracy: 0.89:  39%|▍| 78/2"
      ]
     }
    ],
    "source": [
-    "!python -m openfed.tools.simulator --nproc 31 --logdir /tmp/ ../main.py\\\n",
+    "!python -m openfed.tools.simulator --nproc 11 --logdir /tmp/ ../main.py\\\n",
     "    --task mnist\\\n",
     "    --data_root ../benchmark/datasets/mnist/data\\\n",
     "    --partition dirichlet\\\n",
@@ -229,7 +175,7 @@
     "    --num_parts 1000\\\n",
     "    --epochs 1\\\n",
     "    --rounds 200\\\n",
-    "    --act_clts 100\\\n",
+    "    --act_clts 30\\\n",
     "    --tst_act_clts 30\\\n",
     "    --max_acg_step -1\\\n",
     "    --optim fedavg\\\n",
